# pangeo-forge-runner

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  codecov.yml  dev-requirements.txt  pyproject.toml  requirements-flink.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: dataflow.yaml  flink.yaml  meta-yaml-test.yaml  python-package.yml  release.yaml  unit-test.yml
docs/: conf.py  index.md  requirements.txt
docs/development/: release.md
docs/reference/: bakery.md  commands.md  glossary.md  index.md  storage.md
docs/tutorial/: flink.md  local.md
pangeo_forge_runner/: __init__.py  __main__.py  beam_runners.py  cli.py  dtypes.py  feedstock.py  job_metadata.py  meta_yaml.py  plugin.py  recipe_rewriter.py  storage.py  stream_capture.py
pangeo_forge_runner/bakery/: base.py  dask.py  dataflow.py  execution_metadata.py  flink.py  local.py
pangeo_forge_runner/bakery/flink_historyserver/: persistentvolumes.yaml
pangeo_forge_runner/commands/: _traits.py  bake.py  base.py  expand_meta.py  pangeo-forge-recipes-0.9-requirements.txt
pangeo_forge_runner/meta_yaml/: schema.py
pangeo_forge_runner/runners/: dataflow.py
tests/: conftest.py  test_bake.py  test_bakery.py  test_dataflow.py  test_dataflow_integration.py  test_expand_meta.py  test_fetch.py  test_flink.py  test_json_error.py  test_meta_yaml.py  test_recipes.py  test_rewriter.py
tests/integration/: test_dataflow_integration.py  test_flink.py  test_flink_integration.py
tests/integration/flink/: minio-manifest.yaml  test_flink_integration.py
tests/rewriter-tests/: README.md
tests/rewriter-tests/aliased-multi-import-prune/: original.py  rewritten.py
tests/rewriter-tests/aliased-prune/: original.py  params.py  rewritten.py
tests/rewriter-tests/callable-args-injection/: original.py  rewritten.py
tests/rewriter-tests/callable-args-injection-chained/: original.py  rewritten.py
tests/rewriter-tests/callable-args-injection-dictobj/: original.py  params.py  rewritten.py
tests/rewriter-tests/callable_args_injection/: params.py  rewritten.py
tests/rewriter-tests/no-prune/: params.py  rewritten.py
tests/rewriter-tests/prune/: params.py  rewritten.py
tests/test-data/gpcp-from-gcs/feedstock-0.10.0/: requirements.txt
tests/test-data/gpcp-from-gcs/feedstock-0.10.3/: recipe.py  requirements.txt
tests/test-data/gpcp-from-gcs/feedstock-0.10.x/: recipe.py  requirements.txt
tests/test-data/gpcp-from-gcs/feedstock-0.10.x-dataflow/: meta.yaml  requirements.txt
tests/test-data/gpcp-from-gcs/feedstock-0.10.x-dictobj/: meta.yaml  recipe.py  requirements.txt
tests/test-data/gpcp-from-gcs/feedstock-0.9.x/: recipe.py
tests/test-recipes/broken-recipe/feedstock/: meta.yaml
tests/test-recipes/dict-recipes/feedstock/: meta.yaml  recipe.py
tests/test-recipes/list-recipes/feedstock/: meta.yaml  recipe.py
tests/unit/: test_bake.py  test_custom_traits.py  test_dataflow.py  test_expand_meta.py  test_feedstock.py  test_flink.py  test_meta_yaml.py  test_recipes.py  test_storage.py
tests/unit/test-recipes/list-recipes/feedstock/: meta.yaml
