[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "pangeo-forge-runner"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.9"
description = "Commandline tool to manage pangeo-forge feedstocks"
readme = "README.md"
authors = [
  { name = "Yuvi Panda", email = "yuvipanda@gmail.com" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
license = { text = "Apache-2.0" }
keywords = ["pangeo", "data"]

[project.scripts]
pangeo-forge-runner = "pangeo_forge_runner.cli:main"

[project.urls]
Homepage = "https://github.com/pangeo-forge/pangeo-forge-runner"
Tracker = "https://github.com/pangeo-forge/pangeo-forge-runner/issues"
Documentation = "https://pangeo-forge-runner.readthedocs.io/en/latest/"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
test = { file = ["requirements-test.txt"] }
dataflow = { file = ["requirements-dataflow.txt"] }
flink = { file = ["requirements-flink.txt"] }

[tool.setuptools.package-data]
pangeo_forge_runner = ["py.typed"]

[tool.setuptools_scm]
write_to = "pangeo_forge_runner/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.isort]
# Prevent isort & black from fighting each otherd
profile = "black"
